--- a/css/style.css
+++ b/css/style.css
@@ -405,6 +405,29 @@ i.fi.fi-rr-user {
     animation: spinner 3s linear infinite;
   }
 
+  .sections-others-feature {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+  }
+
+  .sections-other {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    width: 175px;
+    height: 32px;
+    padding: 10px;
+    background-color: #050505;
+    border: 1px solid rgb(216, 214, 214);
+    box-shadow: 0 0 10px rgba(235, 230, 230);
+    border-radius: 8px;
+    margin-top: 40px;
+    margin-bottom: 20px;
+  }
+
   @keyframes spinner {
     0% {
       box-shadow: 1px 3px 1px rgb(170, 168, 38);
@@ -419,6 +442,12 @@ i.fi.fi-rr-user {
   }
   
   .new-feature span {
+    color: rgb(240, 232, 232);
+    font-size: 15px;
+    font-weight: 700;
+  }
+
+  .sections-other span {
     color: rgb(240, 232, 232);
     font-size: 15px;
     font-weight: 700;
